fixed mobile header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <h1 class="main-title">فهرست پروژه ها</h1>
             <h3 class="sub-title">با فهرست پروژه های در جریان ابر اروان بیشتر آشنا شوید</h3>
         </header>
-        <section id="section-1">
+
+        <!-- <section id="section-1">
             <div class="main-container">
                 <div class="iconic-tabs">
                     <ul>
@@ -198,8 +199,9 @@
                     </ul>
                 </div>
             </div>
-        </section>
-        <section id='section-2'>
+        </section> -->
+
+        <!-- <section id='section-2'>
             <div class="main-container">
                 <div class="title-container  d-flex">
                     <div class="icon-wrapper">
@@ -247,8 +249,9 @@
                 </ul>
             </div>
 
-        </section>
-        <section id='section-3'>
+        </section> -->
+
+        <!-- <section id='section-3'>
             <div class="main-container">
                 <div class="title">فرم ثبت نام شبکه ابریارهای آروان</div>
                 <div class="subtitle">در صورتی که مایل باشید می‌توانید از برای ما رزومه بفرستید، لطفا فرم زیر را پر
@@ -435,8 +438,9 @@
                 </form>
             </div>
 
-        </section>
-        <footer>
+        </section> -->
+
+        <!-- <footer>
             <div class="main-container d-flex  align-center flex-column">
                 <div class="main-title ">پروژه های موفق </div>
                 <div>
@@ -451,13 +455,8 @@
                     </ul>
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </div>
-
-
-    </div>
-
-
 </body>
 
 
