--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h3 class="sub-title">با فهرست پروژه های در جریان ابر اروان بیشتر آشنا شوید</h3>
         </header>
 
-        <!-- <section id="section-1">
+        <section id="section-1">
             <div class="main-container">
                 <div class="iconic-tabs">
                     <ul>
@@ -53,7 +53,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="content">
+                <!-- <div class="content">
                     <ul>
                         <li>
                             <div class="d-flex justify-space-between align-center">
@@ -197,9 +197,9 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
-        </section> -->
+        </section>
 
         <!-- <section id='section-2'>
             <div class="main-container">
