--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </li>
                     </ul>
                 </div>
-                <!-- <div class="content">
+                <div class="content">
                     <ul>
                         <li>
                             <div class="d-flex justify-space-between align-center">
@@ -61,7 +61,7 @@
                                 <span class="icon"><i class="fa fa-chevron-up" aria-hidden="true"></i></span>
                             </div>
                         </li>
-                        <li class="active">
+                        <!-- <li class="active">
                             <div class="d-flex justify-space-between align-center">
                                 <div class="menu-text">Drupal Plugin</div>
                                 <span class="icon active"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
@@ -164,7 +164,7 @@
                             </div>
 
 
-                        </li>
+                        </li> -->
                         <li>
                             <div class="d-flex justify-space-between align-center">
                                 <div class="menu-text">Migrate From CloudFlare to</div>
@@ -197,7 +197,7 @@
                             </div>
                         </li>
                     </ul>
-                </div> -->
+                </div>
             </div>
         </section>
 
