--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <span class="icon"><i class="fa fa-chevron-up" aria-hidden="true"></i></span>
                             </div>
                         </li>
-                        <!-- <li class="active">
+                        <li class="active">
                             <div class="d-flex justify-space-between align-center">
                                 <div class="menu-text">Drupal Plugin</div>
                                 <span class="icon active"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
@@ -106,7 +106,7 @@
                                     </div>
 
                                 </div>
-                                <div class="description d-flex">
+                                <!-- <div class="description d-flex">
                                     <div>
                                         <div class="icon-wrapper">
                                             <div class="icon-container">
@@ -160,11 +160,11 @@
                                         </div>
                                         <span class="name">توسط حسین سیدی </span>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
 
 
-                        </li> -->
+                        </li>
                         <li>
                             <div class="d-flex justify-space-between align-center">
                                 <div class="menu-text">Migrate From CloudFlare to</div>
