fixed mobile section-1

--- a/index.html
+++ b/index.html
@@ -106,25 +106,23 @@
                                     </div>
 
                                 </div>
-                                <!-- <div class="description d-flex">
-                                    <div>
+                                <div class="description ">
+                                    <div class="d-flex align-center">
                                         <div class="icon-wrapper">
                                             <div class="icon-container">
                                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
                                             </div>
                                         </div>
+                                        <div class="title custom-title">شرح پروژه</div>
                                     </div>
                                     <div>
-                                        <div class="title custom-title">شرح پروژه</div>
                                         <ul>
                                             <li>
-
                                                 <div class="menu-text">نرم افزاری برای انتقال یک دامنه به همراه تنظیمات
                                                     آن از روی کلودفلر به
                                                     آروان</div>
                                             </li>
                                             <li>
-
                                                 <div class="menu-text">یک دامنه را به همراه تنظیمات مربوطه از سرویس
                                                     کلودفلر به آروان منتقل کند
                                                     API Key این نرم افزار باید بتواند با دریافت</div>
@@ -137,9 +135,9 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="menu-link d-flex justify-space-between align-center">
+                                <div class="menu-link ">
 
-                                    <div class="d-flex justify-space-between align-center">
+                                    <div class="link-container">
                                         <div class="icon-wrapper">
                                             <div class="icon-container">
                                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
@@ -149,7 +147,10 @@
                                             <div class="title custom-title">
                                                 صفحه گیت هاب
                                             </div>
-                                            <div class="url">https://github.com/features/codespaces</div>
+                                            <div class="url">
+                                                <a
+                                                    href="https://github.com/features/codespaces">https://github.com/features/codespaces</a>
+                                            </div>
 
                                         </div>
 
@@ -160,7 +161,9 @@
                                         </div>
                                         <span class="name">توسط حسین سیدی </span>
                                     </div>
-                                </div> -->
+                                    <button class="suggestion-btn">ارسال پیشنهادات</button>
+
+                                </div>
                             </div>
 
 
