--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
             <div class="simple-tabs">
                 <ul class="main-container">
-                    <!-- <li class="active"><span class="tab-title">جلسات استراتژی</span>
+                    <li class="active"><span class="tab-title">جلسات استراتژی</span>
                         <div class="tab-content">
                             <div class="first-title"> جلسات استراتژی</div>
                             <div class="details">هر یک سال یک بار مجموعه جلساتی‌ تحت عنوان جلسات برنامه‌ریزی
@@ -240,12 +240,14 @@
                                 .می‌شود
                             </div>
 
+
+
                             <div class="second-title">حاضرین</div>
                             <div class="details">
                                 تمامی اعضای شرکت می‌توانند در این جلسات حضور پیدا کنند. حضور
                                 راهبر‌های هر تیم در این جلسات اجباری است</div>
                         </div>
-                    </li>-->
+                    </li>
                     <li> <span class="tab-title">جلسات حاکمیت دایره</span> </li>
                     <li> <span class="tab-title">جلسات برنامه ریزی اسپرینت/کانبان</span></li>
                     <li><span class="tab-title">جلسات محصول</span></li>
