fixed form mobile

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
         </section>
 
-        <!-- <section id='section-3'>
+        <section id='section-3'>
             <div class="main-container">
                 <div class="title">فرم ثبت نام شبکه ابریارهای آروان</div>
                 <div class="subtitle">در صورتی که مایل باشید می‌توانید از برای ما رزومه بفرستید، لطفا فرم زیر را پر
@@ -443,7 +443,7 @@
                 </form>
             </div>
 
-        </section> -->
+        </section>
 
         <!-- <footer>
             <div class="main-container d-flex  align-center flex-column">
