--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
         </section>
 
-        <!-- <footer>
+        <footer>
             <div class="main-container d-flex  align-center flex-column">
                 <div class="main-title ">پروژه های موفق </div>
                 <div>
@@ -460,7 +460,7 @@
                     </ul>
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </div>
 </body>
 
