added event to tabs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="main-container">
                 <div class="iconic-tabs">
                     <ul>
-                        <li>
+                        <li class="menu-link">
                             <div class="tab-item">
                                 <span class="tab-icon">
                                     <img src="./assets/img/edit.png" alt="edit-icon">
@@ -33,7 +33,7 @@
                                 <span class="tab-title">پروژه های فعال</span>
                             </div>
                         </li>
-                        <li class="active">
+                        <li class="active menu-link">
                             <div class="tab-item">
                                 <span class="tab-icon">
 
@@ -42,7 +42,7 @@
                                 <span class="tab-title"> در حال ارزیابی </span>
                             </div>
                         </li>
-                        <li>
+                        <li class="menu-link">
                             <div class="tab-item">
                                 <span class="tab-icon">
                                     <img src="./assets/img/checked.png" alt="checked-icon">
@@ -53,7 +53,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="content">
+                <div class="content">tab-1</div>
+                <div class="content active">
                     <ul>
                         <li>
                             <div class="d-flex justify-space-between align-center">
@@ -201,6 +202,8 @@
                         </li>
                     </ul>
                 </div>
+                <div class="content">tab-3</div>
+
             </div>
         </section>
 
