fixed tabs classname

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="main-container">
                 <div class="iconic-tabs">
                     <ul>
-                        <li class="menu-link">
+                        <li>
                             <div class="tab-item">
                                 <span class="tab-icon">
                                     <img src="./assets/img/edit.png" alt="edit-icon">
@@ -33,8 +33,8 @@
                                 <span class="tab-title">پروژه های فعال</span>
                             </div>
                         </li>
-                        <li class="active menu-link">
-                            <div class="tab-item">
+                        <li>
+                            <div class="tab-item active">
                                 <span class="tab-icon">
 
                                     <img src="./assets/img/loader.png" alt="loader-icon">
@@ -42,7 +42,7 @@
                                 <span class="tab-title"> در حال ارزیابی </span>
                             </div>
                         </li>
-                        <li class="menu-link">
+                        <li>
                             <div class="tab-item">
                                 <span class="tab-icon">
                                     <img src="./assets/img/checked.png" alt="checked-icon">
