added event to simple tabs

--- a/index.html
+++ b/index.html
@@ -218,7 +218,6 @@
                     <div class="title main-title">
                         ساختار جلسات
                     </div>
-
                 </div>
                 <div class="subtitle">
                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،
@@ -231,30 +230,35 @@
             </div>
             <div class="simple-tabs">
                 <ul class="main-container">
-                    <li class="active"><span class="tab-title">جلسات استراتژی</span>
-                        <div class="tab-content">
-                            <div class="first-title"> جلسات استراتژی</div>
-                            <div class="details">هر یک سال یک بار مجموعه جلساتی‌ تحت عنوان جلسات برنامه‌ریزی
-                                استراتژیک برگزار می‌شود. براساس این جلسات تیم راهبری داستان
-                                .یک‌ساله‌ی شرکت نگارش می‌شود OKR سال را می‌نویسد و پس از بحث و تبادل نظر
-                                سازمان متناسب با رخداد‌های ۶ ماه گذشته برگزار OKR پس از گذشت ۶ ماهه مجموعه جلساتی در
-                                راستای بازنگری و یا اصلاح استراتژی
-                                و یا
-                                .می‌شود
-                            </div>
-
-
-
-                            <div class="second-title">حاضرین</div>
-                            <div class="details">
-                                تمامی اعضای شرکت می‌توانند در این جلسات حضور پیدا کنند. حضور
-                                راهبر‌های هر تیم در این جلسات اجباری است</div>
-                        </div>
-                    </li>
-                    <li> <span class="tab-title">جلسات حاکمیت دایره</span> </li>
-                    <li> <span class="tab-title">جلسات برنامه ریزی اسپرینت/کانبان</span></li>
-                    <li><span class="tab-title">جلسات محصول</span></li>
+                    <li class="tab-item active"><span class="tab-title">جلسات استراتژی</span> </li>
+                    <li class="tab-item"> <span class="tab-title">جلسات حاکمیت دایره</span> </li>
+                    <li class="tab-item"> <span class="tab-title">جلسات برنامه ریزی اسپرینت/کانبان</span></li>
+                    <li class="tab-item"><span class="tab-title">جلسات محصول</span></li>
                 </ul>
+
+                <div class="simple-tabs-content main-container">
+                    <div class="tab-content active">
+                        <div class="first-title"> جلسات استراتژی</div>
+                        <div class="details">هر یک سال یک بار مجموعه جلساتی‌ تحت عنوان جلسات برنامه‌ریزی
+                            استراتژیک برگزار می‌شود. براساس این جلسات تیم راهبری داستان
+                            .یک‌ساله‌ی شرکت نگارش می‌شود OKR سال را می‌نویسد و پس از بحث و تبادل نظر
+                            سازمان متناسب با رخداد‌های ۶ ماه گذشته برگزار OKR پس از گذشت ۶ ماهه مجموعه جلساتی در
+                            راستای بازنگری و یا اصلاح استراتژی
+                            و یا
+                            .می‌شود
+                        </div>
+
+
+
+                        <div class="second-title">حاضرین</div>
+                        <div class="details">
+                            تمامی اعضای شرکت می‌توانند در این جلسات حضور پیدا کنند. حضور
+                            راهبر‌های هر تیم در این جلسات اجباری است</div>
+                    </div>
+                    <div class="tab-content">content-2</div>
+                    <div class="tab-content">content-3</div>
+                    <div class="tab-content">content-4</div>
+                </div>
             </div>
 
         </section>
